<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">For 1</string>
    <string name="onoff">Play ON/OFF</string>

    <string name="settings">Settings</string>
    <string name="audiosettings">AudioSettings</string>

    <string name="resolution_label">Resolution</string>
    <string name="resolution_times"> x </string>
    <string-array name="resolution_array">
        <item>640x480</item>
        <item>480x640</item>
        <item>320x240</item>
        <item>240x320</item>
        <item>176x144</item>
        <item>144x176</item>
        <item>Custom</item>
    </string-array>

    <string name="moveleft">Left</string>
    <string name="moveright">Right</string>
    <string name="onlinetext">offline</string>
    <string name="prize">Prize</string>


    <string name="ip_setting_label">Address</string>
    <string name="port_setting_label">Port</string>
    <string name="command_setting_label">Command</string>

    <string name="digits_increment">+</string>
    <string name="digits_decrement">-</string>
    <string name="address_dot">.</string>
    <string name="port_80">80</string>
    <string name="port_8080">8080</string>
    <string name="port_80_with_explanation">80 (for Ai-ball)</string>
    <string name="port_8080_with_explanation">8080 (for IP Webcam)</string>
    <string name="command_streaming">\?action=stream</string>
    <string name="command_videofeed">videofeed</string>
    <string name="command_streaming_with_explanation">\?action=stream (for Ai-ball)</string>
    <string name="command_videofeed_with_explanation">videofeed (for IP Webcam)</string>

    <string name="settings_done">Done</string>

    <string name="title_disconnected">Disconnected</string>
    <string name="title_connecting">Connecting&#8230;</string>
    <string name="title_imageerror">Error on preparing images</string>

    <string name="selectVoice">Select Voice</string>
    <string name="yobikake">Call</string>
    <string name="kakegoe">Shoot Call</string>
    <string name="homeru">Prize</string>
    <string name="sayonara">Bye</string>

    <string name="mstart">Music Start</string>
    <string name="mstop">Music Stop</string>

    <string name="record">Rec</string>
    <string name="stoprecord">StopRec</string>
    <string name="playsound">Play</string>
    <string name="stopsound">Stop</string>
    <string name="audioback">Back</string>


    <!-- TODO: remove this placeholder text -->
    <string name="ko_t_notification_placeholder_text_template">
        Your PET is online now!
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>

</resources>