<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <com.camera.kot_for_one.MjpegView
		android:id="@+id/mv"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
		android:layout_weight="1"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/rollleft"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/accent_material_light"
                android:text="@string/moveleft" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/onoffText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/onoff"
                    android:textAlignment="center" />

                <ToggleButton
                    android:id="@+id/toggleButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <Button
                android:id="@+id/rollright"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/accent_material_light"
                android:text="@string/moveright" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/onlinestate"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:src="@drawable/kotoffline" />

                <TextView
                    android:id="@+id/onlinetext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/onlinetext"
                    android:textAlignment="viewStart" />

            </LinearLayout>

            <Button
                android:id="@+id/callBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="?android:attr/colorControlActivated"
                android:text="@string/yobikake" />

            <Button
                android:id="@+id/shcallBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="?android:attr/colorAccent"
                android:text="@string/kakegoe" />

            <Button
                android:id="@+id/goodBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_orange_dark"
                android:text="@string/mstart" />

            <Button
                android:id="@+id/byebyeBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/mstop" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/prize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/abc_btn_borderless_material"
            android:src="@drawable/kotprize" />

    </LinearLayout>

</LinearLayout>
